--- a/poems/index.html
+++ b/poems/index.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">--- title: tags layout: page type: tags ---<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">--- title: poems layout: page type:tags ---<span class="Apple-converted-space"> </span></span></p>
 </body>
 </html>
